Git_WGBH_QC/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Annual Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Fulfilled</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Fulfilled</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>REFUND</fullName>
        </values>
        <values>
            <fullName>Uncollectable</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Donation Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Fulfilled</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Fulfilled</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>REFUND</fullName>
        </values>
        <values>
            <fullName>Uncollectable</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Gift</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Fulfilled</fullName>
        </values>
        <values>
            <fullName>REFUND</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Inkind Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Fulfilled</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Fulfilled</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>REFUND</fullName>
        </values>
        <values>
            <fullName>Uncollectable</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Moves Management</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Fulfilled</fullName>
        </values>
        <values>
            <fullName>Identification</fullName>
        </values>
        <values>
            <fullName>Partially Fulfilled</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>REFUND</fullName>
        </values>
        <values>
            <fullName>Refused</fullName>
        </values>
        <values>
            <fullName>Research</fullName>
        </values>
        <values>
            <fullName>Test Stage</fullName>
        </values>
        <values>
            <fullName>Verbal Commitment</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Purchase Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Cultivation</fullName>
        </values>
        <values>
            <fullName>Estate in Probate</fullName>
        </values>
        <values>
            <fullName>Fulfilled</fullName>
        </values>
        <values>
            <fullName>Intention</fullName>
        </values>
        <values>
            <fullName>Partially Collected</fullName>
        </values>
        <values>
            <fullName>Partially Fulfilled</fullName>
        </values>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>REFUND</fullName>
        </values>
        <values>
            <fullName>Research%2FStrategy</fullName>
        </values>
        <values>
            <fullName>Uncollectable</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Ack_Sent_Date__c</fullName>
        <inlineHelpText>Date the acknowledgment for this gift was sent.</inlineHelpText>
        <label>Acknowledgement Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ack_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that the acknowledgment for this pledge/payment has been sent to the donor.</description>
        <inlineHelpText>If checked, the acknowledgment has been sent to the donor.</inlineHelpText>
        <label>Acknowledgement Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activity_Value__c</fullName>
        <label>Activity Value</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Count__c</fullName>
        <label>Benefit Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Benefit_Counts__c</fullName>
        <label>Benefit Counts</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.IsBenefit__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Benefit_Exists__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there is a benefit on this opportunity there will be a check mark</description>
        <inlineHelpText>There is a benefit on this opportunity, click into the opportunity detail to see the related benefit.</inlineHelpText>
        <label>Benefit Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Status__c</fullName>
        <label>Benefit Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <description>Date that the revenue is recognized by finance</description>
        <inlineHelpText>Date that the revenue is recognized by finance</inlineHelpText>
        <label>Booked Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CC_EFT_ALIAS_ID__c</fullName>
        <description>Used for Data Update (Joe Stadelmann).

This is the ID of the CC EFT Alias</description>
        <formula>CC_EFT_Alias__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC EFT ALIAS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_EFT_Alias__c</fullName>
        <label>CC &amp; EFT Alias</label>
        <referenceTo>CC_Alias__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <label>Campaign Name</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Kind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <picklist>
            <picklistValues>
                <fullName>Annual Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Kind Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Gifts Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matching Gifts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realty Perks Donations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Giving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <formula>CC_EFT_Alias__r.Last_Four_Digits__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Card_Type__c</fullName>
        <label>Charge Card Type</label>
        <picklist>
            <controllingField>payment_method__c</controllingField>
            <picklistValues>
                <fullName>Mastercard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Express</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charitable_Deduction__c</fullName>
        <label>Charitable Deduction</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Month__c</fullName>
        <formula>CASE(
MONTH( CloseDate ) ,
1, &quot;05 January&quot;,
2, &quot;06 February&quot;,
3, &quot;07 March&quot;,
4, &quot;08 April&quot;,
5, &quot;09 May&quot;,
6, &quot;10 June&quot;,
7, &quot;11 July&quot;,
8, &quot;12 August&quot;,
9, &quot;01 September&quot;,
10, &quot;02 October&quot;,
11, &quot;03 November&quot;,
12, &quot;04  December&quot;,
&quot;Invalid month&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reasons__c</fullName>
        <label>Closed Lost Reasons</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Cannot Afford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hung Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Commit / Won&apos;t Specify $</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supports other non-profits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programming</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cable (watching/paying)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WBUR, 90.9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Didn&apos;t get premium/response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel 11 or Channel 36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deceased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refuses all telemarketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moving out of area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Can&apos;t receive signal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supports Auction only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other/Misc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change AD to RN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gave Already</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CombinedRollupFieldset__c</fullName>
        <description>Concatenated fields used during rollups to locate the most recent opportunity.</description>
        <formula>TEXT(CloseDate) + &apos;;|;&apos;+ TEXT(Amount)</formula>
        <inlineHelpText>Concatenated fields used during rollups to locate the most recent opportunity.</inlineHelpText>
        <label>Combined Rollup Fieldset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Id_for_Role__c</fullName>
        <inlineHelpText>Hidden field for passing a Contact Id for Contact Role creation.</inlineHelpText>
        <label>Contact Id for Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s) - DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year_Amount__c</fullName>
        <formula>IF( YEAR( CloseDate ) = YEAR(TODAY()) , Amount  , 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Opportunity Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;),&quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN( TEXT(MONTH(CloseDate))) = 0, &quot;Close Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( Amount &lt;= 0, &quot;Amount, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( LeadSource,&quot;&quot;), &quot;Lead Source, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(NextStep)=0, &quot;Next Steps&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Type,&quot;&quot;), 0,20) + IF( LEN( TEXT(MONTH(CloseDate))) = 0, 0,20) + IF( Amount &lt;= 0, 0,20) + IF( ISPICKVAL( LeadSource,&quot;&quot;), 0,20) + IF( LEN(NextStep)=0, 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status- DEPRECATED</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <description>Is the gift restricted or unrestricted</description>
        <inlineHelpText>Designated with a planned gift if it is restricted or unrestricted</inlineHelpText>
        <label>Designation</label>
        <picklist>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unrestricted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount_Rate_Month__c</fullName>
        <label>Discount Rate Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Rate_Year__c</fullName>
        <label>Discount Rate Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Rate__c</fullName>
        <label>Discount Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_vs_Actual__c</fullName>
        <formula>Stretch_Amount__c -  Giving_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected vs Actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Segment__c</fullName>
        <formula>text(Campaign__r.Financial_segment_Level1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundation_Name__c</fullName>
        <label>Foundation Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foundation_Pay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foundation Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Lookup__c</fullName>
        <label>Fund</label>
        <referenceTo>Fund__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gift_Date_18_Month__c</fullName>
        <label>Gift Date 18 Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Date_3_Month__c</fullName>
        <label>Gift Date 3 Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Date_6_Month__c</fullName>
        <label>Gift Date 6 Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Date_Time__c</fullName>
        <inlineHelpText>To be populated by vendor file procesing. this field will not be available for users to populate information.</inlineHelpText>
        <label>Gift Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Giving_Amount__c</fullName>
        <label>Giving Amount</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Giving_Segment__c</fullName>
        <label>Giving Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partners</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Donor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Murrow Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Air Pledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph Lowell Society</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sustainer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle Donation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Household__c</fullName>
        <label>Household</label>
        <referenceTo>Household__c</referenceTo>
        <relationshipLabel>Proposal</relationshipLabel>
        <relationshipName>Proposal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Installment_Period__c</fullName>
        <label>Installment Period</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irregular Installment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installments__c</fullName>
        <label>Number of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Opp_From_Individual__c</fullName>
        <formula>IF( Account.SYSTEMIsIndividual__c, &apos;true&apos;, &apos;false&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Opp From Individual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date_18_Month__c</fullName>
        <label>Last Payment Date 18 Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Date_1_Year__c</fullName>
        <label>Last Payment Date 1 Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s) - DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matched_Amount__c</fullName>
        <description>Amount of pledge matched by company</description>
        <label>Matched Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Matching_Company__c</fullName>
        <label>Matching Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Matching Company)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matching_Gift_Status__c</fullName>
        <label>Matching Gift Status</label>
        <picklist>
            <picklistValues>
                <fullName>Form Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unfullfilled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ineligible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Matching_Gift__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Matching Gift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Level__c</fullName>
        <label>Member Level</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Membership_End_Date__c</fullName>
        <inlineHelpText>Date membership period ends.</inlineHelpText>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Origin__c</fullName>
        <inlineHelpText>Is this a renewal, a new membership, or a membership with someone who lapsed and has returned.</inlineHelpText>
        <label>Membership Origin</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reacquire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Membership_Start_Date__c</fullName>
        <inlineHelpText>Date when membership period starts</inlineHelpText>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Balance__c</fullName>
        <formula>Giving_Amount__c - payment_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Paid_Amount__c</fullName>
        <formula>IF(IsClosed,  paid_amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paid Amt $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Activity__c</fullName>
        <description>Opportunity Activity Level 3 for Reporting</description>
        <label>Opportunity Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Member Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid-Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National/Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ralph Lowell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oppty_Related_Contact__c</fullName>
        <description>The contact associated to the opportunity/ask</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proposal/Pledge</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number - DEPRECATED</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Gift_Type__c</fullName>
        <label>Override Gift Type</label>
        <picklist>
            <picklistValues>
                <fullName>Add Gift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Donation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejoin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Reset</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Giving_Record_s_CC_EFT_ID__c</fullName>
        <formula>Recurring_Donation_Opportunity__r.CC_EFT_ALIAS_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Giving Record&apos;s CC EFT ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Giving_Stage__c</fullName>
        <formula>TEXT(Recurring_Donation_Opportunity__r.StageName)</formula>
        <label>Parent Giving Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_ID__c</fullName>
        <formula>Recurring_Donation_Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Description__c</fullName>
        <label>Payment Method Description</label>
        <type>TextArea</type>
    </fields>
</CustomObject>